added disclaimer and par worksample, edited top button

--- a/art.html
+++ b/art.html
@@ -46,6 +46,9 @@
             <li><a href="index.html#contact">CONTACT</a></li>
         </ul>
 
+        <a class="buttontop" href="#top">
+            <i class="fas fa-arrow-up"></i>
+        </a>
 
         <section class="sectioncolumn" id="soloart">
             <div class="sectionheader">
