--- a/worksamples.html
+++ b/worksamples.html
@@ -44,9 +44,13 @@
     </ul>
 
     <a class="buttontop" href="#top">
-        <i class="fas fa-arrow-up"><p class ="top">top</p></i>
+        <i class="fas fa-arrow-up"></i>
     </a>
-
+    <div class="disclaimer">
+        <h4>
+            This website is under construction.
+        </h4>
+    </div>
     <section id="webdesign" class="webdesign">
         <div class="row">
             <h3> Minimum Viable Products</h3>
@@ -147,55 +151,33 @@
             <h3 class="worksample-heading"> Project Management + Production</h3>
         </div>
         <div class="col s12 m12 l12">
-            <h5>Grantsearch</h5>
+            <h5>Pittsburgh Artist Registry</h5>
         </div>
         <div class="row">
             <div class="col s12 m6 l6">
-                <p><span class="boldtype">Description:</span> The goal of this project was to create a minimum viable product based on research about and surveying target audience. The end product was a simple grant searching tool, as demonstrated in this
-                    MVP.
+                <p><span class="boldtype">Description:</span> The Pittsburgh Artist Registry is a database featuring visual, performing, and literary artists in Western Pennsylvania.
                 </p>
             </div>
+
             <div class="col s12 m6 l6">
-                <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub. Additional unpublished versions including work in Node.js, JQuery, SQLite, and Ruby on Rails.</p>
-            </div>
-            <div class="col s12 m6 l6">
-                <p><span class="boldtype">Role:</span> My role on the team was Team Lead, prototyping, JavaScripter, and general code cleanup.</p>
+                <p><span class="boldtype">Role:</span> As a project manager at the Office of Public Art, I led the process to update the Pittsburgh Artist Registry, formerly a text-based database of local artists. I led focus groups comprised of artists,
+                    venue owners, curators, and arts patrons which informed our UX and information heirarchy. Before my departure from the office in 2017, I initiated another general focus group for a future, mobile-forward redesign.</p>
             </div>
         </div>
 
         <div class="row">
             <div class="worksample-imgcontainer">
-                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch1.png">
-                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch2.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/par.png">
             </div>
         </div>
-        <div class="row">
-            <div class="worksample-imgcontainer">
-                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch3.png">
-                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch4.png">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12 m5 l3">
-                <a class="buttonlink-worksamples" href="https://smcinelly.github.io/Grantsearch/" target="_blank">
+
+        <div class="row par-button">
+            <div class="col s12 m5 l4 offset-l4">
+                <a class="buttonlink-worksamples" href="https://www.pittsburghartistregistry.org/" target="_blank">
                     <div class="linkbutton">View Site</div>
                 </a>
             </div>
-            <div class="col s12 m5 l3">
-                <a class="buttonlink-worksamples" href="https://youtu.be/5tFHrpJTk9o" target="_blank">
-                    <div class="linkbutton">Demo Video</div>
-                </a>
-            </div>
-            <div class="col s12 m5 l3">
-                <a class="buttonlink-worksamples" href="https://www.figma.com/file/SXc2QSO0WKOF0MRKFyMeF8UY/Grantsearch-Wireframe" target="_blank">
-                    <div class="linkbutton">Wireframe</div>
-                </a>
-            </div>
-            <div class="col s12 m5 l3">
-                <a class="buttonlink-worksamples" href="https://github.com/smcinelly/Grantsearch" target="_blank">
-                    <div class="linkbutton">Repo</div>
-                </a>
-            </div>
+
         </div>
         </div>
     </section>
@@ -205,9 +187,14 @@
             <div class="col s12 m12 l12">
                 <h3>Other</h3>
                 <div class="col s12 m12 l12">
-
                 </div>
             </div>
+        </div>
+
+        <div class="row">
+            <p>
+                Coming soon!
+            </p>
         </div>
     </section>
 
