--- a/writing.html
+++ b/writing.html
@@ -45,7 +45,7 @@
     </ul>
 
     <a class="buttontop" href="#top">
-        <i class="fas fa-arrow-up"><p class ="top">top</p></i>
+        <i class="fas fa-arrow-up"></i>
     </a>
 
 
