Duct tape fallback for portrait mask-image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h2>KATE HANSEN</h2>
                 <div class="sidebar">
                     <div class="portrait">
-                        <img class="maskedobject" src="assets/k8web.jpg" alt="Kate portrait">
+                        <img class="maskedobject" src="assets/k8web.jpg" alt="Kate portrait" />
                     </div>
 
                     <p>I am a junior front-end web developer with a previous career as a public art project manager. <br> <br> Although I am shifting to a dev role, I’m a natural born project lead and manager that strives to help others better themselves
