--- a/worksamples.html
+++ b/worksamples.html
@@ -52,47 +52,44 @@
         </h4>
     </div>
     <section id="webdesign" class="webdesign">
-        <section class="projects">
-            <div class="row">
-                <h3 class="worksample-heading">Projects</h3>
-            </div>
-            <div class="col s12 m12 l12">
-                <h5>Writing Prompts for Kids (mini app)</h5>
-            </div>
-            <div class="row">
-                <div class="col s12 m6 l6">
-                    <p><span class="boldtype">Description:</span> My stepkid wanted some help with her creative writing. She wanted a writing prompt book, but was afraid she would forget it when moving between parent houses and school. With this mini app,
-                        she can always have writing prompts on something she will never be without - her phone! Hosted on Glitch.com.
-                    </p>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <p><span class="boldtype">Tools used:</span> Vanilla JS, HTML, CSS. Glitch.com for deployment. Content sources documented in Read Me file.</p>
-                </div>
+        <div class="row">
+            <h3 class="worksample-heading">Projects</h3>
+        </div>
+        <div class="col s12 m12 l12">
+            <h5>Writing Prompts for Kids (mini app)</h5>
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Description:</span> My stepkid wanted some help with her creative writing. She wanted a writing prompt book, but was afraid she would forget it when moving between parent houses and school. With this mini app, she
+                    can always have writing prompts on something she will never be without - her phone! Hosted on Glitch.com.
+                </p>
             </div>
 
-            <div class="row">
-                <div class="worksample-imgcontainer">
-                    <img class="responsive-img worksample-image materialboxed" src="assets/writingapp.png">
-                </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Tools used:</span> Vanilla JS, HTML, CSS. Glitch.com for deployment. Content sources documented in Read Me file.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image materialboxed" src="assets/writingapp.png">
+            </div>
+        </div>
+
+        <div class="row par-button">
+            <div class="col s12 m5 l4 offset-l4">
+                <a class="buttonlink-worksamples" href="https://writing-prompt-kids.glitch.me" target="_blank">
+                    <div class="linkbutton">View Site</div>
+                </a>
             </div>
 
-            <div class="row par-button">
-                <div class="col s12 m5 l4 offset-l4">
-                    <a class="buttonlink-worksamples" href="https://writing-prompt-kids.glitch.me" target="_blank">
-                        <div class="linkbutton">View Site</div>
-                    </a>
-                </div>
-
-            </div>
-            </div>
-        </section>
+        </div>
+        </div>
 
 
+    </section>
 
-
-
-
+    <section class="mvps">
         <div class="row">
             <h3> Minimum Viable Products</h3>
             <!--nutremidy-->
@@ -130,6 +127,7 @@
                 </a>
             </div>
         </div>
+
 
         <!--Grantsearch-->
         <div class="col s12 m12 l12 worksample-heading">
@@ -184,6 +182,7 @@
             </div>
         </div>
         </div>
+    </section>
     </section>
 
     <!--Production/Projectmanagement-->
