lots of little style changes, border on worksample pages, hover colors on contact links, making styles across pages more consistent

--- a/writing.html
+++ b/writing.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body class="worksample-body">
 
     <nav>
         <div class="nav-wrapper" id="top">
@@ -51,8 +51,9 @@
 
 
 
+
     <section id="blogsnworkshops">
-        <h2>WRITING + WORKSHOPS</h2>
+        <h2 class="headertype">WRITING + WORKSHOPS</h2>
 
         <div class="row">
             <div class="col s12 m6">
