--- a/index.html
+++ b/index.html
@@ -145,13 +145,7 @@
 
     </div>
 
-    <!-- -----------WRITING AND WORKSHoPS --------- -->
-
-
-
-
-
-    <!-----------------CONTACT FORM--------------------->
+    <!--contact-->
     <footer class="contact" id="contact">
         <h2>CONTACT</h2>
 
