--- a/worksamples.html
+++ b/worksamples.html
@@ -46,12 +46,8 @@
     <a class="buttontop" href="#top">
         <i class="fas fa-arrow-up"></i>
     </a>
-    <div class="disclaimer">
-        <h4>
-            This website is under construction.
-        </h4>
-    </div>
-    <section id="webdesign" class="webdesign">
+
+    <section id="webdesign" class="wkcard webdesign">
         <div class="row">
             <h3 class="worksample-heading">Projects</h3>
         </div>
@@ -89,7 +85,7 @@
 
     </section>
 
-    <section class="mvps">
+    <section class="wkcard mvps">
         <div class="row">
             <h3> Minimum Viable Products</h3>
             <!--nutremidy-->
@@ -186,7 +182,7 @@
     </section>
 
     <!--Production/Projectmanagement-->
-    <section class="production">
+    <section class="wkcard production">
         <div class="row">
             <h3 class="worksample-heading"> Project Management + Production</h3>
         </div>
@@ -222,21 +218,7 @@
         </div>
     </section>
 
-    <section class="other">
-        <div class="row">
-            <div class="col s12 m12 l12">
-                <h3>Other</h3>
-                <div class="col s12 m12 l12">
-                </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <p>
-                Coming soon!
-            </p>
-        </div>
-    </section>
 
 
 
