added  color of strength

--- a/worksamples.html
+++ b/worksamples.html
@@ -80,7 +80,42 @@
             </div>
 
         </div>
+
+        <!--somali site-->
+
+        <div class="col s12 m12 l12">
+            <h5>Color of Strength</h5>
         </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Description:</span> Artist Lindsey Scherloum was in-residence with the Somali Bantu community in Pittsburgh from 2018-2019. She wanted to create a web-based arts experience to feature video interviews of community
+                    members. The artist designed the website and I developed it using Webflow.
+                </p>
+            </div>
+
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Tools used:</span> Figma for prototyping and design. Webflow for development and deployment.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image materialboxed" src="assets/cos1.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/cos2.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/cos3.png">
+            </div>
+        </div>
+
+
+        <div class="row par-button">
+            <div class="col s12 m5 l4 offset-l4">
+                <a class="buttonlink-worksamples" href="https://www.colorofstrength.com" target="_blank">
+                    <div class="linkbutton">View Site</div>
+                </a>
+            </div>
+
+        </div>
+
 
 
     </section>
