--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav-wrapper" id="top">
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+                <li><a href="hansen_kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
                 <li><a href="worksamples.html">WORKSAMPLES</a></li>
                 <li><a href="writing.html">WRITING</a></li>
                 <li><a href="artlanding.html">ART</a></li>
@@ -36,7 +36,7 @@
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+        <li><a href="hansen_kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
         <li><a href="worksamples.html">WEB + DESIGN</a></li>
         <li><a href="writing.html">WRITING + WKSHPS</a></li>
         <li><a href="artlanding.html">ART</a></li>
