--- a/worksamples.html
+++ b/worksamples.html
@@ -26,7 +26,7 @@
             <ul class="right hide-on-med-and-down">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="index.html">ABOUT</a></li>
-                <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+                <li><a href="hansen_kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
                 <li><a href="writing.html">WRITING</a></li>
                 <li><a href="artlanding.html">ART</a></li>
                 <li><a href="index.html#contact">CONTACT</a></li>
@@ -37,7 +37,7 @@
     <ul class="sidenav" id="mobile-demo">
         <li><a href="index.html">HOME</a></li>
         <li><a href="index.html">ABOUT</a></li>
-        <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+        <li><a href="hansen_kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
         <li><a href="writing.html">WRITING + WKSHPS</a></li>
         <li><a href="artlanding.html">ART</a></li>
         <li><a href="index.html#contact">CONTACT</a></li>
